--- a/changelog
+++ b/changelog
@@ -1,3 +1,6 @@
 +First version of TwisterRoulette
 mercredi 5 juillet 2017, 10:42:52 (UTC+0200)
 *****************
++First version of TwisterRoulette
+mercredi 5 juillet 2017, 10:43:26 (UTC+0200)
+*****************
