--- a/changelog
+++ b/changelog
@@ -4,3 +4,6 @@ mercredi 5 juillet 2017, 10:42:52 (UTC+0200)
 +First version of TwisterRoulette
 mercredi 5 juillet 2017, 10:43:26 (UTC+0200)
 *****************
++Finalization of alpha 0.1
+jeudi 6 juillet 2017, 16:10:52 (UTC+0200)
+*****************
